<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@mipmap/bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/Clock" android:textSize="20sp" android:textStyle="bold" android:textColor="@color/title" android:id="@+id/title_tv" android:paddingBottom="16dp" android:layout_width="344dp" android:layout_height="wrap_content" android:text="@string/social1" android:textAllCaps="true" android:textAlignment="center" android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:format12Hour="@string/time_format" android:format24Hour="@string/time_format" app:layout_constraintBottom_toTopOf="@+id/loginLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/loginLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5">
        <LinearLayout android:orientation="horizontal" android:id="@+id/phoneLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginRight="0dp">
            <TextView android:textSize="16sp" android:textColor="@color/hint_color" android:gravity="center" android:id="@+id/country" android:layout_width="80dp" android:layout_height="match_parent" android:text="@string/hint_region"/>
            <com.google.android.material.textfield.TextInputLayout android:theme="@style/TextInputLayoutAppearance" android:textColorHint="@color/hint_color" android:id="@+id/phoneTextInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_phone" android:layout_weight="1">
                <EditText android:textColor="@color/info_text" android:id="@+id/phone_edit" android:background="@drawable/tr_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:singleLine="true" android:digits="1234567890+-() " android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ProgressBar android:id="@+id/smsRegProgress" android:visibility="invisible" android:layout_width="35dp" android:layout_height="match_parent" android:layout_weight="0" style="?android:attr/progressBarStyle"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/TextInputLayoutAppearance" android:textColorHint="@color/hint_color" android:id="@+id/smscode_hint" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_sms">
            <com.google.android.material.textfield.TextInputEditText android:textColor="@color/info_text" android:id="@+id/smscode_edit" android:background="@drawable/tr_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="4" android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox android:textSize="12sp" android:textColor="@color/info_text" android:layout_gravity="bottom" android:id="@+id/agree_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/agree_process_data"/>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/TextInputLayoutAppearance" android:textColorHint="@color/hint_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_fio">
            <com.google.android.material.textfield.TextInputEditText android:textColor="@color/info_text" android:id="@+id/fio_edit" android:background="@drawable/tr_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/TextInputLayoutAppearance" android:textColorHint="@color/hint_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_email">
            <com.google.android.material.textfield.TextInputEditText android:textColor="@color/info_text" android:id="@+id/email_edit" android:background="@drawable/tr_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/BlackClock" android:textSize="100sp" android:id="@+id/main_tc_time" android:paddingBottom="16dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/time_format" android:format24Hour="@string/time_format" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.515" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_tv" app:layout_constraintVertical_bias="0.131"/>
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/BlackBody1" android:textSize="22sp" android:id="@+id/main_tv_day" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/main_tc_time" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <com.google.android.material.textview.MaterialTextView android:textSize="37sp" android:textStyle="bold" android:textColor="@color/info_text" android:gravity="center" android:id="@+id/imeiLabel1" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/Clock" android:textSize="16sp" android:textColor="@color/info_text" android:id="@+id/info_text2_tv" android:paddingBottom="16dp" android:visibility="invisible" android:layout_width="346dp" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/social3" android:textAlignment="center" android:format12Hour="@string/time_format" android:format24Hour="@string/time_format" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loginLayout"/>
    <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/main_btn_call1" android:background="@drawable/cyrcle_background" android:visibility="gone" android:layout_width="@dimen/main_fragment_icon_size" android:layout_height="@dimen/main_fragment_icon_size" android:layout_marginBottom="64dp" android:src="@drawable/ic_contacts" android:tint="@color/light_blue" app:backgroundTintMode="multiply" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/ButtonTheme"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/main_btn_sos" android:background="@drawable/button_ripple_sos" android:visibility="gone" android:layout_width="match_parent" android:layout_height="130dp" android:layout_marginBottom="150dp" android:layout_marginStart="@dimen/end_work_top_margin" android:layout_marginEnd="@dimen/end_work_top_margin" android:elevation="5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0">
        <TextView android:textSize="13sp" android:textColor="@android:color/white" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="10dp" android:layout_marginRight="3dp" android:text="@string/sos_text" android:textAlignment="center"/>
        <TextView android:textSize="42sp" android:textColor="@android:color/white" android:gravity="center" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/sos" android:textAllCaps="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/main_btn_call" android:background="@drawable/button_ripple_simple" android:visibility="gone" android:layout_width="130dp" android:layout_height="130dp" android:layout_marginTop="80dp" android:layout_marginStart="@dimen/end_work_top_margin" android:layout_marginEnd="@dimen/end_work_top_margin" android:elevation="5dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/main_tc_time">
        <TextView android:textSize="14sp" android:textColor="@android:color/black" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="16dp" android:layout_marginRight="3dp" android:text="@string/order" android:textAlignment="center"/>
        <ImageView android:gravity="center" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ic_red_call"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton android:textSize="32sp" android:textColor="@android:color/white" android:id="@+id/main_btn_sos_old" android:visibility="gone" android:layout_width="match_parent" android:layout_height="130dp" android:layout_marginTop="80dp" android:text="@string/sos" android:layout_marginStart="@dimen/end_work_top_margin" android:layout_marginEnd="@dimen/end_work_top_margin" app:backgroundTint="@color/colorSos" app:backgroundTintMode="multiply" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/main_tc_time"/>
    <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/main_btn_round_action" android:background="@drawable/oval" android:visibility="invisible" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="25dp" android:src="@drawable/ic_camera" android:tint="@color/colorSos" app:backgroundTint="@color/cardview_light_background" app:backgroundTintMode="multiply" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.501" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/info_text2_tv" style="@style/ButtonTheme"/>
    <androidx.appcompat.widget.AppCompatButton android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorSos" android:id="@+id/main_btn_news" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginBottom="50dp" android:text="@string/news" android:layout_marginStart="@dimen/end_work_top_margin" android:layout_marginEnd="@dimen/end_work_top_margin" app:backgroundTint="@color/design_default_color_background" app:backgroundTintMode="multiply" app:layout_constraintBottom_toTopOf="@+id/main_btn_call1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0"/>
    <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/cancelButton" android:background="@drawable/cyrcle_background" android:visibility="gone" android:layout_width="@dimen/main_fragment_icon_size" android:layout_height="@dimen/main_fragment_icon_size" android:layout_marginBottom="64dp" android:src="@drawable/ic_stop" android:tint="@color/colorSos" android:text="Button" app:backgroundTintMode="multiply" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/main_btn_call" style="@style/ButtonTheme"/>
</androidx.constraintlayout.widget.ConstraintLayout>
