<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/Body1" android:textSize="@dimen/end_work_text_size" android:id="@+id/end_work_tv_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/end_work_top_margin" android:text="@string/end_confirm" android:textAlignment="center" android:layout_marginStart="@dimen/end_work_start_end_margin" android:layout_marginEnd="@dimen/end_work_start_end_margin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/end_work_text_size" android:id="@+id/end_work_btn_end" android:layout_width="0dp" android:layout_height="@dimen/end_work_btn_end_size" android:text="@string/end" android:layout_marginStart="@dimen/end_work_btn_margin" android:layout_marginEnd="@dimen/end_work_btn_margin" app:backgroundTint="@color/colorAccent" app:backgroundTintMode="multiply" app:layout_constraintBottom_toTopOf="@+id/end_work_btn_cancel" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/end_work_tv_title" style="@style/ButtonTheme"/>
    <androidx.appcompat.widget.AppCompatButton android:id="@+id/end_work_btn_cancel" android:layout_width="0dp" android:layout_height="80dp" android:layout_marginBottom="@dimen/end_work_top_margin" android:text="@string/cancel" android:layout_marginStart="@dimen/end_work_btn_cancel_margin" android:layout_marginEnd="@dimen/end_work_btn_cancel_margin" app:backgroundTint="@color/gray_600" app:backgroundTintMode="multiply" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/end_work_btn_end" style="@style/ButtonTheme"/>
</androidx.constraintlayout.widget.ConstraintLayout>
